[INJICERT-1214] fix review comments
Signed-off-by: jackjain <jackjain1995@gmail.com>